--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Photos</title>
-  </head>
-  <body>
-  
-  </body>
+<html lang="en">
+<head>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Photos</title>
+  <meta name="description" content="The personal webpage of Zachery Sheley (That's me.).">
+  <meta name="author" content="Zachery M. Sheley">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS/JS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="index.css">
+  <link href="index.js">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+</head>
+<body>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<h2>Photos</h2>
+<div id="myBtnContainer">
+  <button class="btn active" onclick="window.location.href='https://zsheley.github.io'"> Home</button>
+  <button class="btn" onclick="window.location.href='https://zsheley.github.io/photos'"> Photos</button>
+  <button class="btn" onclick="window.location.href='https://zsheley.github.io/projects'"> Projects</button>
+  <button class="btn" onclick="window.location.href='https://zsheley.github.io/more'"> More</button>
+</div>
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
 </html>
