--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<h2>Photos</h2>
+<h2>PHOTOS</h2>
 <div id="myBtnContainer">
   <button class="btn active" onclick="window.location.href='https://zsheley.github.io'"> Home</button>
   <button class="btn" onclick="window.location.href='https://zsheley.github.io/photos'"> Photos</button>
