--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 <!-- The grid: four columns -->
 <div class="row">
   <div class="column">
-    <img src="img_nature.jpg" alt="Nature" onclick="myFunction(this);">
+    <img src="79195_Dope-95.jpg" alt="Nature" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="img_snow.jpg" alt="Snow" onclick="myFunction(this);">
+    <img src="2535.jpeg" alt="Snow" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="img_mountains.jpg" alt="Mountains" onclick="myFunction(this);">
+    <img src="928_1525886918707.jpeg" alt="Mountains" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="img_lights.jpg" alt="Lights" onclick="myFunction(this);">
+    <img src="866_1523740384116 (1).jpeg" alt="Lights" onclick="myFunction(this);">
   </div>
 </div>
 
