--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- CSS/JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="index.css">
-  <link href="index.js">
+  <link rel="stylesheet" href="index.js">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
