--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- CSS/JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="index.js">
+  <script src="index.js">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -65,7 +65,8 @@
 
   <!-- Image text -->
   <div id="imgtext"></div>
-</div>  
+</div> 
+</script>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
