--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <!-- CSS/JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="index.css">
+  <script src="index.js"></script>
  
 
   <!-- Favicon
@@ -39,7 +40,6 @@
   <button class="btn" onclick="window.location.href='https://zsheley.github.io/more'"> More</button>
 </div>
 
-<script src="index.js">
 <!-- The grid: four columns -->
 <div class="row">
   <div class="column">
@@ -67,7 +67,6 @@
   <!-- Image text -->
   <div id="imgtext"></div>
 </div> 
-</script>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
