--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 </div>
 
 <!-- The grid: four columns -->
+  
+<script src="index.js"></script>
+
+  
 <div class="row">
   <div class="column">
     <img src="79195_Dope-95.jpg" alt="Nature" onclick="myFunction(this);">
