--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <!-- The grid: four columns -->
   
-<script src="index.js"></script>
+<script src="index.js">
 
   
 <div class="row">
@@ -71,7 +71,7 @@
   <!-- Image text -->
   <div id="imgtext"></div>
 </div> 
-
+</script>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
