--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   <button class="btn" onclick="window.location.href='https://zsheley.github.io/more'"> More</button>
 </div>
 
+<body id="photos">
+  <script src="index.js"></script>
 <!-- The grid: four columns -->
   
 <div class="row">
@@ -66,6 +68,8 @@
   <!-- Image text -->
   <div id="imgtext"></div>
 </div> 
+  
+  </body>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
