--- a/index.html
+++ b/index.html
@@ -40,7 +40,21 @@
 
 
 <!-- The grid: four columns -->
-  
+  <head>
+<script language="javascript">
+  function myFunction(imgs) {
+  // Get the expanded image
+  var expandImg = document.getElementById("expandedImg");
+  // Get the image text
+  var imgText = document.getElementById("imgtext");
+  // Use the same src in the expanded image as the image being clicked on from the grid
+  expandImg.src = imgs.src;
+  // Use the value of the alt attribute of the clickable image as text inside the expanded image
+  imgText.innerHTML = imgs.alt;
+  // Show the container element (hidden with CSS)
+  expandImg.parentElement.style.display = "block";
+}
+</script>
 <div class="row">
   <div class="column">
     <img src="79195_Dope-95.jpg" alt="Nature" onclick="myFunction(this);">
@@ -67,7 +81,7 @@
   <!-- Image text -->
   <div id="imgtext"></div>
 </div> 
-  
+  </head>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
