--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <head>
+    
+    <!-- CSS/JS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="index.css">
+
+    
 <h2>PHOTOS</h2>
 <div id="myBtnContainer">
   <button class="btn active" onclick="window.location.href='https://zsheley.github.io'"> Home</button>
@@ -11,7 +18,7 @@
   <button class="btn" onclick="window.location.href='https://zsheley.github.io/projects'"> Projects</button>
   <button class="btn" onclick="window.location.href='https://zsheley.github.io/more'"> More</button>
 </div>
-
+  </head>
 
 <head>
   
@@ -23,11 +30,6 @@
   <meta name="author" content="Zachery M. Sheley">
   
   
-  
-  <!-- CSS/JS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="index.css">
-
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
