--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- CSS/JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="index.css">
 
     
 <h2>PHOTOS</h2>
@@ -34,114 +34,31 @@
   
   
 <style>
-  * {
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #f1f1f1;
-  padding: 20px;
-  font-family: Arial;
-}
-
-/* Center website */
-.main {
-  max-width: 1000px;
-  margin: auto;
-}
-
-h1 {
-  font-size: 50px;
-  word-break: break-all;
-}
-
-.row {
-  margin: 8px -16px;
-}
-
-/* Add padding BETWEEN each column (if you want) */
-.row,
-.row > .column {
-  padding: 8px;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 33.33%;
-  display: none; /* Hide columns by default */
-}
-
-/* Clear floats after rows */ 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Content */
-.content {
-  background-color: white;
-  padding: 10px;
-}
-
-/* The "show" class is added to the filtered elements */
-.show {
-  display: block;
-}
-
-/* Style the buttons */
-.btn {
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  background-color: white;
-  cursor: pointer;
-}
-
-/* Add a grey background color on mouse-over */
-.btn:hover {
-  background-color: #ddd;
-}
-
-/* Add a dark background color to the active button */
-.btn.active {
-  background-color: #666;
-   color: white;
-}
-
-  
-  
 /* The grid: Four equal columns that floats next to each other */
 .column {
   float: left;
   width: 25%;
   padding: 10px;
 }
-
 /* Style the images inside the grid */
 .column img {
   opacity: 0.8; 
   cursor: pointer; 
 }
-
 .column img:hover {
   opacity: 1;
 }
-
 /* Clear floats after the columns */
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
-
 /* The expanding image container */
 .container {
   position: relative;
   display: none;
 }
-
 /* Expanding image text */
 #imgtext {
   position: absolute;
@@ -150,7 +67,6 @@ h1 {
   color: white;
   font-size: 20px;
 }
-
 /* Closable button inside the expanded image */
 .closebtn {
   position: absolute;
