--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="row">
   <div class="column">
-    <img src="img_nature.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
+    <img src="funnyhat.jpg" alt="Funny Hat" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <img src="img_snow.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
