--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <img src="funnyhat.jpg" alt="Funny Hat" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="img_snow.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
+    <img src="gagaglasses copy.jpg" alt="GaGa Glasses" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <img src="img_mountains.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
