--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <img src="gagaglasses copy.jpg" alt="GaGa Glasses" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="img_mountains.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    <img src="" alt="" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="img_lights.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="" alt="" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
 
