--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h2>PHOTOS</h2>
   <div id="myBtnContainer">
     <button class="btn active" onclick="window.location.href='https://zsheley.github.io'"> Home</button>
-    <button class="btn" onclick="window.location.href='https://zsheley.github.io/photos'"> Photos</button>
+    <button class="btn" onclick="window.location.href='https://zsheley.github.io/photos'"> Gallery</button>
     <button class="btn" onclick="window.location.href='https://zsheley.github.io/projects'"> Projects</button>
     <button class="btn" onclick="window.location.href='https://zsheley.github.io/more'"> More</button>
   </div>
@@ -32,10 +32,10 @@
     <img src="funnyhat.jpg" alt="Funny Hat" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="gagaglasses copy.jpg" alt="GaGa Glasses" style="width:100%" onclick="myFunction(this);">
+    <img src="page 1.jpeg" alt="Ready..Set..[insert here]!" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="" alt="" style="width:100%" onclick="myFunction(this);">
+    <img src="back cover.jpeg" alt="Back Cover" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <img src="" alt="" style="width:100%" onclick="myFunction(this);">
