--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <link rel="stylesheet" href="index.css"> 
   <meta charset="utf-8">
-  <title>Photos</title>
+  <title>Gallery</title>
   <meta name="description" content="The personal webpage of Zachery Sheley (That's me.).">
   <meta name="author" content="Zachery M. Sheley">
   
@@ -17,7 +17,7 @@
 </style> 
 </head>
 <body> 
-  <h2>PHOTOS</h2>
+  <h2>GALLERY</h2>
   <div id="myBtnContainer">
     <button class="btn active" onclick="window.location.href='https://zsheley.github.io'"> Home</button>
     <button class="btn" onclick="window.location.href='https://zsheley.github.io/photos'"> Gallery</button>
