--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="row">
   <div class="column">
-    <img src="funnyhat.jpg" alt="Funny Hat" style="width:100%" onclick="myFunction(this);">
+    <img src="front cover.jpeg" alt="Front Cover" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <img src="page 1.jpeg" alt="Ready..Set..[insert here]!" style="width:100%" onclick="myFunction(this);">
