--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
 
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    
   <link rel="stylesheet" href="index.css"> 
   <meta charset="utf-8">
   <title>Gallery</title>
