--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </style> 
 </head>
 <body> 
-  <h2>GALLERY</h2>
+  <h2>PHOTOJOURNAL</h2>
   <div id="myBtnContainer">
     <button class="btn active" onclick="window.location.href='https://zsheley.github.io'"> Home</button>
     <button class="btn" onclick="window.location.href='https://zsheley.github.io/photos'"> Gallery</button>
