--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
   </style>
 
 <script>
+  
+  //UPDATE PLEASE//
 function myFunction(imgs) {
   var expandImg = document.getElementById("expandedImg");
   var imgText = document.getElementById("imgtext");
