--- a/index.html
+++ b/index.html
@@ -35,12 +35,26 @@
     <img src="page 1.jpeg" alt="Ready..Set..[insert here]!" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="back cover.jpeg" alt="Back Cover" style="width:100%" onclick="myFunction(this);">
+    <img src="page 2.jpeg" alt="[None]" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="page 3.jpeg" alt="[None]" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <img src="" alt="" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
+
+
+
+<div class="row">
+  <div class="column">
+    <img src="back cover.jpeg" alt="Back Cover" style="width:100%" onclick="myFunction(this);">
+  </div>
+</div>
+
+
+
 
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
