--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
   <link rel="stylesheet" href="index.css"> 
   <meta charset="utf-8">
-  <title>PHOTO JOURNAL</title>
+  <title>Photo Journal</title>
   <meta name="description" content="The personal webpage of Zachery Sheley (That's me.).">
   <meta name="author" content="Zachery M. Sheley">
   
